--- a/extention/manifest.json
+++ b/extention/manifest.json
@@ -1,12 +1,11 @@
 {
-
     "manifest_version": 2,
     "name": "Youtube Comment Blocker",
     "version": "1.0",
   
     "content_scripts": [
         {
-          "matches": ["https://developer.mozilla.org/*"],
+          "matches": ["https://youtube.com/watch"],
           "js": ["js/block.js"]
         }
       ]
